# NCMatrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cxx  ncm_setup.cxx  ncm_setup.hxx  ncm_utils.cxx  ncm_utils.hxx  planepool.cxx  planepool.hxx  planepoolelement.cxx  planepoolelement.hxx
